# CMKV

./: .gitignore  AUTHORS  CMakeLists.txt  board.cc  board.hh  bruteforce.cc  main.cc  metropolis_hastings.cc  simulated_annealing.cc  solvers.cc  solvers.hh  tile.hh  utils.hh
ins/: medium3.in  medium3.txt  medium4.txt  medium5.in  medium5.txt
outs/: medium4.outp  medium5.outp
utils/: benchmark.cc  gnome-tetravex-parser.py  plot_bench.py
utils/bench/test/: chrono.csv  success.csv
utils/ins/: gen6.in  medium4.in
utils/ins/2/: in_example.txt
utils/ins/5/: gen5.in
utils/outs/: medium3.outp
